<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:theme="@style/NikeThemeAuth"
    android:layoutDirection="rtl"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:tint="?colorOnPrimary"
            android:src="@drawable/ic_nike_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Nike.Headline5"
            android:text="@string/loginScreenTittle"
            android:layout_marginTop="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Nike.Body1"
            android:text="@string/inputEmailAndPassword"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:layout_width="@dimen/authFieldSize"
            android:inputType="textEmailAddress"
            android:layout_height="42dp"
            style="@style/NikeThemeAuthEditText"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:id="@+id/emailLoginEt"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="@dimen/authFieldSize"
            android:layout_height="42dp"
            style="@style/NikeThemeAuthEditText"
            android:inputType="textPassword"
            android:id="@+id/passwordLoginEt"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:hint="@string/password"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/authFieldSize"
            android:layout_height="42dp"
            android:id="@+id/loginBtn"
            android:text="@string/loginTittle"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/signupHint"
            android:textColor="?colorOnPrimary"
            android:alpha="0.5"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoSignUpfr"
            android:textColor="?colorOnPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/signup"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>