<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/emptyStateLayout"
    android:translationZ="10dp"
    android:background="?colorOnPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:id="@+id/emptyStateCart">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_state"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emptyStateMessage"
            tools:text="@string/cartEmptyState"
            android:text="@string/cartEmptyStateLoginRequired"
            android:textAppearance="@style/TextAppearance.Nike.Headline5"
            android:textColor="?colorPrimary"
            android:layout_marginTop="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cartEmptyStateCallToAction"
            app:icon="@drawable/ic_user"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:id="@+id/emptyStateCtaBtn"
            app:cornerRadius="15dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cartEmptyStateSeeAllproducts"
            app:icon="@drawable/ic_grid"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:id="@+id/emptyStateCtaBtnProducts"
            app:cornerRadius="15dp"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>