<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    tools:context=".feature.checkout.ShippingActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.alireza.nikeiran.view.scrool.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:nt_title="@string/ShippingTittle"
            android:id="@+id/toolbarCheckout"
            android:background="?colorOnPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/firstNameEt"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    tools:text="علیرضا"
                    android:hint="@string/ShippingFirstName"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lastNameEt"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    tools:text="عبدالمالکی"
                    android:hint="@string/ShippingLastName"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="3173865511"
                    android:id="@+id/postalCodeEt"
                    android:maxLength="10"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    android:hint="@string/ShippingZipCode"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    tools:text="09038654708"
                    android:id="@+id/phoneNumberEt"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    android:hint="@string/ShippingNumber"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/addressEt"
                    tools:text="کرج _ فردیس  - خیابان کانال"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    android:hint="@string/ShippingAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Nike.Headline5"
                android:text="@string/tittlePurchaseDetail"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:textColor="?android:textColorSecondary"
                android:layout_marginTop="24dp"
                />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="?dividerColor"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"
                            android:text="@string/totalPricePurchaseDetail"
                            android:layout_gravity="center_vertical|start"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/totalPriceCheckOut"
                            tools:text="8918000 هزار تومان"
                            android:layout_gravity="center_vertical|end"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"/>
                    </FrameLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?colorOnPrimary"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"
                            android:text="@string/shipingCostPurchaseDetail"
                            android:layout_gravity="center_vertical|start"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="8918000 هزار تومان"
                            android:id="@+id/shipingCostCheckOut"
                            android:layout_gravity="center_vertical|end"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"/>
                    </FrameLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?colorOnPrimary"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"
                            android:text="@string/payablePricePurchaseDetail"
                            android:layout_gravity="center_vertical|start"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="8918000 هزار تومان"
                            android:id="@+id/payablePriceCheckOut"
                            android:layout_gravity="center_vertical|end"
                            android:textAppearance="@style/TextAppearance.Nike.Headline6"/>
                    </FrameLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payOnline"
                    android:id="@+id/payOnlineBtn"
                    android:padding="8dp"
                    android:layout_marginEnd="12dp"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    android:layout_gravity="center_horizontal|end"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/payOnPlace"
                    android:id="@+id/payCodBtn"
                    android:padding="8dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAppearance="@style/TextAppearance.Nike.Headline6"
                    android:layout_gravity="center_horizontal|start"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>