<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@drawable/bacground_comments_items"
    android:layoutDirection="rtl"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_height="46dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderItemTitle"
            android:textAppearance="@style/TextAppearance.Nike.Headline6"
            android:layout_gravity="center_vertical|start"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="56"
            android:id="@+id/orderItemId"
            android:textAppearance="@style/TextAppearance.Nike.Headline6"
            android:layout_gravity="center_vertical|end"
            />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?dividerColor"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_height="46dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderItemPrice"
            android:textAppearance="@style/TextAppearance.Nike.Headline6"
            android:layout_gravity="center_vertical|start"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="560000 تومان"
            android:id="@+id/orderItemPrice"
            android:textAppearance="@style/TextAppearance.Nike.Headline6"
            android:layout_gravity="center_vertical|end"
            />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?dividerColor"/>
    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.Nike.Body1"
        android:layout_gravity="center_horizontal"
        android:text="@string/orderItemProducts"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:padding="16dp"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/orderProductsLl"
            android:orientation="horizontal"/>
    </HorizontalScrollView>
</LinearLayout>